--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
  <h1>KDH</h1>
- <a href="../">Home</a> | <a href="../blog">Blog</a>
+ <a href="./">Home</a> | <a href="./blog">Blog</a>
  <p>KDH, 즉 김동현은 인간입니다.</p>
 </body>
 </html>
