--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
  <h1>KDH</h1>
- <a href="./">Home</a> | <a href="./blog">Blog</a>
+ <a href="./">Home</a> | <a href="./blog">Blog</a> <br>
  <a href="https://boj.kr/erick12">BOJ</a> | <a href="https://solved.ac/profile/erick12">solved.ac</a> | <a href="https://github.com/erickk1212">GitHub</a>
  <p>KDH, 즉 김동현은 인간입니다.</p>
  <img src="./images/geometrydash.png"></img>
