--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
  <a href="./">Home</a> | <a href="./blog">Blog</a> <br><br>
  <a href="https://boj.kr/erick12">BOJ</a> | <a href="https://solved.ac/profile/erick12">solved.ac</a> | <a href="https://github.com/erickk1212">GitHub</a>
  <p>KDH, 즉 김동현은 인간입니다.</p>
- <img src="./images/raccoon.png"></img> <img src="./images/geometrydash.png" height=300></img>
+ <img src="./images/raccoon.png" height=512></img> <img src="./images/geometrydash.png"></img>
 </body>
 </html>
