--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
  <h1>KDH</h1>
- <a href="./">Home</a> | <a href="./games">Games</a> <br><br>
+ <a href="../">Home</a> | <a href="../games">Games</a> <br><br>
  <a href="https://boj.kr/erick12">BOJ</a> | <a href="https://solved.ac/profile/erick12">solved.ac</a> | <a href="https://github.com/erickk1212">GitHub</a> | <a href="https://erick12.tistory.com">Blog</a>
  <p>KDH, 즉 김동현은 인간입니다.</p>
- <img src="./images/raccoon.png" height=512></img> <img src="./images/geometrydash.png"></img>
+ <img src="../images/raccoon.png" height=512></img> <img src="../images/geometrydash.png"></img>
 </body>
 </html>
