--- a/games/index.html
+++ b/games/index.html
@@ -10,7 +10,7 @@
   </head>
 <body>
 <h1>KDH's Games</h1>  
-<a href="./">Home</a> | <a href="./games">Games</a> <br><br>
+<a href="../">Home</a> | <a href="../games">Games</a> <br><br>
   <a href="../thechallenge">The Challenge</a>
 </body>
 </html>
