--- a/games/index.html
+++ b/games/index.html
@@ -11,6 +11,6 @@
 <body>
 <h1>KDH's Games</h1>  
 <a href="../">Home</a> | <a href="../games">Games</a> <br><br>
-  <a href="../thechallenge">The Challenge</a>
+  <a href="./thechallenge">The Challenge</a>
 </body>
 </html>
