--- a/games/thechallenge/index.html
+++ b/games/thechallenge/index.html
@@ -453,7 +453,7 @@
     explanation: "Catalan(2) = 2"
 },
 {
-    category: "🔥 특별 문제",
+    category: "계산 집약적",
     question: "정의역 {1,...,1999}, 공역 {2000,...,2003}인 함수 f에서 f(1)+...+f(1999)가 짝수인 함수 개수를 1000으로 나눈 나머지는?",
     answer: 128,
     score: 50,
@@ -467,7 +467,7 @@
     explanation: "D(3) = 2"
 },
 {
-    category: "계산 집약적",
+    category: "기본 순열/조합 심화",
     question: "3개의 빨간 공, 2개의 파란 공, 1개의 초록 공을 일렬로 나열하는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 60,
     score: 12,
@@ -489,7 +489,7 @@
 },
 {
     category: "점화식 & 카탈란 수",
-    question: "3쌍의 괄호로 만들 수 있는 올바른 괄호 문자열의 수를 1000으로 나눈 나머지는?",
+    question: "원점에서 (3,3)으로 가는 최단 경로 중 직선 y=x를 지나지 않는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 5,
     score: 10,
     explanation: "Catalan(3) = 5"
@@ -524,7 +524,7 @@
 },
 {
     category: "점화식 & 카탈란 수",
-    question: "5쌍의 괄호로 만들 수 있는 올바른 괄호 문자열의 수를 1000으로 나눈 나머지는?",
+    question: "원점에서 (5,5)으로 가는 최단 경로 중 직선 y=x를 지나지 않는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 42,
     score: 10,
     explanation: "Catalan(5) = 42"
@@ -559,7 +559,7 @@
 },
 {
     category: "점화식 & 카탈란 수",
-    question: "6쌍의 괄호로 만들 수 있는 올바른 괄호 문자열의 수를 1000으로 나눈 나머지는?",
+    question: "정팔각형의 각 꼭짓점을 선분으로 연결하되 선분끼리 만나지 않는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 132,
     score: 10,
     explanation: "Catalan(6) = 132"
@@ -594,7 +594,7 @@
 },
 {
     category: "점화식 & 카탈란 수",
-    question: "7쌍의 괄호로 만들 수 있는 올바른 괄호 문자열의 수를 1000으로 나눈 나머지는?",
+    question: "정9각형을 대각선으로 7개의 삼각형으로 분할하는 경우 수를 1000으로 나눈 나머지는?",
     answer: 429,
     score: 10,
     explanation: "Catalan(7) = 429"
@@ -642,13 +642,13 @@
 },
 {
     category: "점화식 & 카탈란 수",
-    question: "8쌍의 괄호로 만들 수 있는 올바른 괄호 문자열의 수를 1000으로 나눈 나머지는?",
+    question: "원점에서 (8,8)으로 가는 최단 경로 중 직선 y=x를 지나지 않는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 429,
     score: 10,
     explanation: "Catalan(8) = 429"
 },
 {
-    category: "계산 집약적",
+    category: "기본 순열/조합 심화",
     question: "2개의 빨간 공, 3개의 파란 공, 2개의 초록 공을 일렬로 나열하는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 60,
     score: 12,
@@ -820,8 +820,21 @@
     answer: 30,
     score: 10,
     explanation: "5! / (2!×2!×1!) = 120 / 4 = 30"
+},
+{
+    category: "중복 조합",
+    question: "1<= x1 <= x2 <= x3 <= ... <= x10 <= 5를 만족하는 자연수의 순서쌍 (x1, x2, x3, x4, ..., x10)의 개수를 1000으로 나눈 나머지는?",
+    answer:1,
+    score:15,
+    explanation:"5H10=14C10=14C4=1001"
+},
+{
+    category: "중복 조합",
+    question: "x1+x2+...+x5=10를 만족하는 음 아닌 정수의 순서쌍 (x1, x2, x3, x4, x5)의 개수는?",
+    answer:1,
+    score:15,
+    explanation:"5H10=14C10=14C4=1001"
 }
-
 ];
 
 
