--- a/games/thechallenge/index.html
+++ b/games/thechallenge/index.html
@@ -432,11 +432,11 @@
 
         const questionBank = [
 {
-    category: "포함배제 원리",
+    category: "포함과 배제의 원리",
     question: "1부터 94까지의 자연수 중 7, 6, 3 중 적어도 하나로 나누어지는 수의 개수를 1000으로 나눈 나머지는?",
     answer: 48,
     score: 10,
-    explanation: "포함배제: 13+15+31-2-4-5+0 = 48"
+    explanation: "13+15+31-2-4-5+0 = 48"
 },
 {
     category: "분할과 분배",
@@ -460,7 +460,7 @@
     explanation: "전체 경우의 수: 4^1999 → 짝수 조건: 절반 = 4^1998 = 128 mod 1000"
 },
           {
-    category: "특수 순열",
+    category: "포함과 배제의 원리",
     question: "3개의 원소로 만들 수 있는 완전 교란 순열의 수를 1000으로 나눈 나머지는?",
     answer: 2,
     score: 10,
@@ -474,7 +474,7 @@
     explanation: "6! / (3!×2!×1!) = 720 / 12 = 60"
 },
 {
-    category: "포함배제 원리",
+    category: "포함과 배제의 원리",
     question: "1부터 80까지 자연수 중 4 또는 5의 배수인 수의 개수를 1000으로 나눈 나머지는?",
     answer: 36,
     score: 10,
@@ -488,28 +488,28 @@
     explanation: "S(7,3)×3! = 144×6 = 864"
 },
 {
-    category: "점화식 & 카탈란 수",
+    category: "점화식",
     question: "원점에서 (3,3)으로 가는 최단 경로 중 직선 y=x를 지나지 않는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 5,
     score: 10,
     explanation: "Catalan(3) = 5"
 },
 {
-    category: "특수 순열",
+    category: "포함과 배제의 원리",
     question: "4개의 원소로 만들 수 있는 완전 교란 순열의 수를 1000으로 나눈 나머지는?",
     answer: 9,
     score: 10,
     explanation: "D(4) = 9"
 },
 {
-    category: "계산 집약적",
+    category: "기본 순열/조합 심화",
     question: "2개의 빨간 공, 2개의 파란 공, 1개의 초록 공을 일렬로 나열하는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 30,
     score: 12,
     explanation: "5! / (2!×2!×1!) = 120 / 4 = 30"
 },
 {
-    category: "포함배제 원리",
+    category: "포함과 배제의의 원리",
     question: "1부터 90까지 자연수 중 3 또는 5의 배수인 수의 개수를 1000으로 나눈 나머지는?",
     answer: 48,
     score: 10,
@@ -523,28 +523,28 @@
     explanation: "S(6,2)×2! = 31×2 = 62"
 },
 {
-    category: "점화식 & 카탈란 수",
+    category: "점화식",
     question: "원점에서 (5,5)으로 가는 최단 경로 중 직선 y=x를 지나지 않는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 42,
     score: 10,
     explanation: "Catalan(5) = 42"
 },
 {
-    category: "특수 순열",
+    category: "포함과 배제의 원리",
     question: "5개의 원소로 만들 수 있는 완전 교란 순열의 수를 1000으로 나눈 나머지는?",
     answer: 44,
     score: 10,
     explanation: "D(5) = 44"
 },
 {
-    category: "계산 집약적",
+    category: "기본 순열/조합 심화",
     question: "2개의 빨간 공, 1개의 파란 공, 1개의 초록 공을 일렬로 나열하는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 12,
     score: 12,
     explanation: "4! / (2!×1!×1!) = 24 / 2 = 12"
 },
 {
-    category: "포함배제 원리",
+    category: "포함과 배제의 원리",
     question: "1부터 100까지 자연수 중 2 또는 3의 배수인 수의 개수를 1000으로 나눈 나머지는?",
     answer: 67,
     score: 10,
@@ -558,28 +558,28 @@
     explanation: "S(8,3)×3! = 966×6 = 5796 → 5796 % 1000 = 796"
 },
 {
-    category: "점화식 & 카탈란 수",
+    category: "점화식",
     question: "정팔각형의 각 꼭짓점을 선분으로 연결하되 선분끼리 만나지 않는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 132,
     score: 10,
     explanation: "Catalan(6) = 132"
 },
 {
-    category: "특수 순열",
+    category: "포함과 배제의 원리",
     question: "6개의 원소로 만들 수 있는 완전 교란 순열의 수를 1000으로 나눈 나머지는?",
     answer: 265,
     score: 10,
     explanation: "D(6) = 265"
 },
 {
-    category: "계산 집약적",
+    category: "기본 순열/조합 심화",
     question: "3개의 빨간 공, 1개의 파란 공, 1개의 초록 공을 일렬로 나열하는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 20,
     score: 12,
     explanation: "5! / (3!×1!×1!) = 120 / 6 = 20"
 },
 {
-    category: "포함배제 원리",
+    category: "포함과 배제의의 원리",
     question: "1부터 70까지 자연수 중 5 또는 6의 배수인 수의 개수를 1000으로 나눈 나머지는?",
     answer: 24,
     score: 10,
@@ -593,21 +593,21 @@
     explanation: "S(5,3)×3! = 25×6 = 150"
 },
 {
-    category: "점화식 & 카탈란 수",
+    category: "점화식",
     question: "정9각형을 대각선으로 7개의 삼각형으로 분할하는 경우 수를 1000으로 나눈 나머지는?",
     answer: 429,
     score: 10,
     explanation: "Catalan(7) = 429"
 },
 {
-    category: "계산 집약적",
+    category: "기본 순열/조합 심화",
     question: "5개의 빨간 공, 1개의 파란 공, 2개의 초록 공을 일렬로 나열하는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 120,
     score: 12,
     explanation: "8! / (5!×1!×2!) = 40320 / 120 = 336"
 },
 {
-    category: "포함배제 원리",
+    category: "포함과 배제의 원리",
     question: "1부터 60까지 자연수 중 3, 6, 9의 배수인 수의 개수를 1000으로 나눈 나머지는?",
     answer: 21,
     score: 10,
@@ -620,14 +620,14 @@
     score: 12,
     explanation: "S(7,4)×4! = 140×24 = 3360 → 3360 % 1000 = 360"
 },{
-    category: "계산 집약적",
+    category: "기본 순열/조합 심화",
     question: "3개의 빨간 공, 3개의 파란 공을 일렬로 나열하는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 20,
     score: 12,
     explanation: "6! / (3!×3!) = 720 / 36 = 20"
 },
 {
-    category: "포함배제 원리",
+    category: "포함과 배제의 원리",
     question: "1부터 100까지 자연수 중 4 또는 7의 배수인 수의 개수를 1000으로 나눈 나머지는?",
     answer: 39,
     score: 10,
@@ -641,7 +641,7 @@
     explanation: "S(9,4)×4! = 3025×24 = 72600 → 72600 % 1000 = 600"
 },
 {
-    category: "점화식 & 카탈란 수",
+    category: "점화식",
     question: "원점에서 (8,8)으로 가는 최단 경로 중 직선 y=x를 지나지 않는 경우의 수를 1000으로 나눈 나머지는?",
     answer: 429,
     score: 10,
@@ -655,7 +655,7 @@
     explanation: "7! / (2!×3!×2!) = 5040 / 12 = 420"
 },
 {
-    category: "포함배제 원리",
+    category: "포함과 배제의의 원리",
     question: "1부터 50까지 자연수 중 2, 4, 6의 배수인 수의 개수를 1000으로 나눈 나머지는?",
     answer: 25,
     score: 10,
